[project]
name = "image-aligner"
version = "0.1.0"
description = "Image alignment tool with geometric and color matching"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
]

[tool.uv]
dev-dependencies = []
